Btn wraps to newline on correct pixels

--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -25,10 +25,11 @@
 }
 
 /* Media screen */
-@media only screen and (max-width: 1156px) {
+@media only screen and (max-width: 1173px) {
   .courseInfoBtn {
     margin-top: 10px;
     margin-left: 0;
+    display: inline-block;
   }
 }
 
